Fix spacing issues with UL and h3 and h4 tags

--- a/scss/partials/_globals.scss
+++ b/scss/partials/_globals.scss
@@ -14,6 +14,13 @@ h3{
 	font-family: $headerFont;
 	font-weight: 700;
 	margin: 0 0 0.25em;
+	font-size: 1.45em;
+}
+h4{
+	font-family: $headerFont;
+	font-weight: 700;
+	margin: 0 0 0.25em;
+	font-size: 1.25em;
 }
 p{
 	color:$black;
@@ -34,6 +41,11 @@ a{
 		border:none;
 	}
 }
+.et_pb_text_inner{
+	li{
+		margin-bottom: 1.0em;
+	}
+}
 .et_pb_portfolio_item{
 	margin-bottom: 1.0em;
 }
@@ -46,7 +58,7 @@ ul,.entry-content ul{
 
 .et_pb_text{
 	ul,.entry-content ul{
-		padding: 5px 0 1.5em 2.3em;
+		padding: 5px 0 20px 2.3em;
 	}
 }
 .monkey_icon{
